--- a/penguins/cohort.ipynb
+++ b/penguins/cohort.ipynb
@@ -81,7 +81,7 @@
    "id": "58994d91",
    "metadata": {},
    "source": [
-    "You can run this notebook in **Local Mode** or in **SageMaker Studio**. If you are running this notebook in Local Mode, you need to set up your environment running the [Local Setup Notebook](local-setup.ipynb). If you are running this notebook in SageMaker Studio, you need to set up your environment running the [Studio Setup Notebook](studio-setup.ipynb) and ensure your kernel is \"TensorFlow 2.6 Python 3.8 CPU Optimized\" with the start-up script naned \"packages.\"\n",
+    "You can run this notebook in **Local Mode** or in **SageMaker Studio**. If you are running this notebook in Local Mode, you need to set up your environment running the [Local Setup Notebook](local-setup.ipynb). If you are running this notebook in SageMaker Studio, you need to set up your environment running the [Studio Setup Notebook](studio-setup.ipynb) and ensure your kernel is \"TensorFlow 2.6 Python 3.8 CPU Optimized\" with the start-up script named \"packages.\"\n",
     "\n",
     "<div class=\"alert\" style=\"background-color:#6e420c; color: #fff\"><strong>Note:</strong> \n",
     "    Select a unique name for your <strong>BUCKET</strong>. Change the default value of the `BUCKET` constant below.\n",
@@ -11025,7 +11025,7 @@
     "        if USE_TUNING_STEP\n",
     "        else train_model_step.properties.ModelArtifacts.S3ModelArtifacts\n",
     "    ),\n",
-    "    framework_version=\"2.8\",\n",
+    "    framework_version=config[\"framework_version\"],\n",
     "    sagemaker_session=config[\"session\"],\n",
     "    role=config[\"role\"],\n",
     ")\n",
@@ -13311,9 +13311,6 @@
     }
    ],
    "source": [
-    "from botocore.exceptions import ClientError\n",
-    "\n",
-    "\n",
     "ENDPOINT = \"penguins-endpoint\"\n",
     "DATA_CAPTURE_DESTINATION = f\"{S3_LOCATION}/monitoring/data-capture\"\n",
     "\n",
@@ -13346,12 +13343,12 @@
     "    \n",
     "    iam_client.attach_role_policy(\n",
     "        RoleName=\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\",\n",
-    "        PolicyArn=policy\n",
+    "        PolicyArn=lambda_role_arn\n",
     "    )\n",
     "    \n",
     "    iam_client.attach_role_policy(\n",
     "        RoleName=\"arn:aws:iam::aws:policy/AmazonSageMakerFullAccess\",\n",
-    "        PolicyArn=policy\n",
+    "        PolicyArn=lambda_role_arn\n",
     "    )\n",
     "    \n",
     "    print(f'Role \"{lambda_role_name}\" created with ARN \"{lambda_role_arn}\".')\n",
