--- a/penguins/studio-setup.ipynb
+++ b/penguins/studio-setup.ipynb
@@ -274,7 +274,8 @@
     "pip install -q --upgrade scikit-learn==1.3.1\n",
     "pip install -q --upgrade PyYAML==6.0\n",
     "pip install -q --upgrade sagemaker\n",
-    "pip install -q --upgrade ipytest"
+    "pip install -q --upgrade ipytest\n",
+    "pip install -q --upgrade pandas"
    ]
   },
   {
