--- a/penguins/cohort.ipynb
+++ b/penguins/cohort.ipynb
@@ -83,6 +83,9 @@
    "source": [
     "You can run this notebook in **Local Mode** or in **SageMaker Studio**. If you are running this notebook in Local Mode, you need to set up your environment running the [Local Setup Notebook](local-setup.ipynb). If you are running this notebook in SageMaker Studio, you need to set up your environment running the [Studio Setup Notebook](studio-setup.ipynb) and ensure your kernel is \"TensorFlow 2.6 Python 3.8 CPU Optimized\" with the start-up script named \"packages.\"\n",
     "\n",
+    "To build our system using SageMaker, we need access to `ml.m5.xlarge` instances. By default, the quota on a new AWS account is zero, so you need to request a quota increase. You can do that under Service Quotas > AWS Services > Amazon SageMaker. Find `ml.m5.xlarge` and request a quota increase for processing jobs, training jobs, transform jobs, and endpoint usage. In the meantime, you can use `ml.t3.large` as a substitute.\n",
+    "\n",
+    "\n",
     "<div class=\"alert\" style=\"background-color:#6e420c; color: #fff\"><strong>Note:</strong> \n",
     "    Select a unique name for your <strong>BUCKET</strong>. Change the default value of the `BUCKET` constant below.\n",
     "</div>\n"
