--- a/penguins/local-setup.ipynb
+++ b/penguins/local-setup.ipynb
@@ -17,11 +17,11 @@
     "   $ source .venv/bin/activate\n",
     "   ```\n",
     "   \n",
-    "2. Make sure you have Docker Desktop installed and running on your computer:\n",
+    "2. Make sure you have [Docker Desktop](https://docs.docker.com/) installed and running on your computer:\n",
     "\n",
     "   `$ docker ps`\n",
     "\n",
-    "3. [Install the AWS CLI](https://docs.aws.amazon.com/cli/latest/userguide/getting-started-install.html) and [configure it with your credentials](https://docs.aws.amazon.com/cli/latest/userguide/getting-started-quickstart.html).\n",
+    "3. [Install the AWS CLI](https://docs.aws.amazon.com/cli/latest/userguide/getting-started-install.html) and [configure it with your credentials](https://docs.aws.amazon.com/cli/latest/userguide/cli-configure-files.html).\n",
     "\n",
     "4. Run this notebook to install the required libraries in your virtual environment.\n",
     "\n",
