--- a/penguins/local-setup.ipynb
+++ b/penguins/local-setup.ipynb
@@ -47,6 +47,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "print(\"MY_VARIABLE\" in os.environ)\n",
+    "# os.environ"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
