--- a/penguins/studio-setup.ipynb
+++ b/penguins/studio-setup.ipynb
@@ -15,219 +15,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "78e86c92-8c57-4b4c-b6a8-1b8246dedf2a",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert\" style=\"background-color:#6e420c; color: #fff\"><strong>Note:</strong> \n",
-    "    Update the following constants with your SageMaker <strong>Domain Id</strong> and <strong>User Profile</strong>. You can find them in your Amazon SageMaker dashboard under \"Domains\".\n",
-    "</div>"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "9e7cca6b-3ed1-4dfb-a570-a9d40eb531e0",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "DOMAIN_ID = \"d-givocgtibv1g\"\n",
-    "USER_PROFILE = \"default-1682182522641\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "843c0a29-57b3-4bb0-bb12-0c0225938ba7",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## Step 1 - Permissions \n",
+    "%load_ext dotenv\n",
+    "%dotenv\n",
     "\n",
-    "To run the notebooks we use during the program, you need to update the Execution Policy assigned to SageMaker's Execution Role and add the appropriate permissions.\n",
-    "\n",
-    "The following cell displays the name of Execution Role you are currently using."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "099706c2-b9a8-471e-a21d-3a132febc184",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'arn:aws:iam::325223348818:role/service-role/AmazonSageMaker-ExecutionRole-20230312T160501'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import sagemaker\n",
-    "\n",
-    "role = sagemaker.get_execution_role()\n",
-    "role"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "46bc8e33-ea4f-4219-8501-1decad22653a",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert\" style=\"background-color:#6e420c; color: #fff\"><strong>Note:</strong> \n",
-    "    Open the Amazon IAM service, find the role and edit the custom Execution Policy assigned to it. You can edit the permissions of the Execution Policy and use the following definition:\n",
-    "</div>\n",
-    "\n",
-    "\n",
-    "\n",
-    "```json\n",
-    "{\n",
-    "    \"Version\": \"2012-10-17\",\n",
-    "    \"Statement\": [\n",
-    "        {\n",
-    "            \"Sid\": \"IAM0\",\n",
-    "            \"Effect\": \"Allow\",\n",
-    "            \"Action\": [\n",
-    "                \"iam:CreateServiceLinkedRole\"\n",
-    "            ],\n",
-    "            \"Resource\": \"*\",\n",
-    "            \"Condition\": {\n",
-    "                \"StringEquals\": {\n",
-    "                    \"iam:AWSServiceName\": [\n",
-    "                        \"autoscaling.amazonaws.com\",\n",
-    "                        \"ec2scheduled.amazonaws.com\",\n",
-    "                        \"elasticloadbalancing.amazonaws.com\",\n",
-    "                        \"spot.amazonaws.com\",\n",
-    "                        \"spotfleet.amazonaws.com\",\n",
-    "                        \"transitgateway.amazonaws.com\"\n",
-    "                    ]\n",
-    "                }\n",
-    "            }\n",
-    "        },\n",
-    "        {\n",
-    "            \"Sid\": \"IAM1\",\n",
-    "            \"Effect\": \"Allow\",\n",
-    "            \"Action\": [\n",
-    "                \"iam:CreateRole\",\n",
-    "                \"iam:DeleteRole\",\n",
-    "                \"iam:PassRole\",\n",
-    "                \"iam:AttachRolePolicy\",\n",
-    "                \"iam:DetachRolePolicy\",\n",
-    "                \"iam:CreatePolicy\"\n",
-    "            ],\n",
-    "            \"Resource\": \"*\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"Sid\": \"Lambda\",\n",
-    "            \"Effect\": \"Allow\",\n",
-    "            \"Action\": [\n",
-    "                \"lambda:CreateFunction\",\n",
-    "                \"lambda:DeleteFunction\",\n",
-    "                \"lambda:InvokeFunctionUrl\",\n",
-    "                \"lambda:InvokeFunction\",\n",
-    "                \"lambda:UpdateFunctionCode\",\n",
-    "                \"lambda:InvokeAsync\",\n",
-    "                \"lambda:AddPermission\",\n",
-    "                \"lambda:RemovePermission\"\n",
-    "            ],\n",
-    "            \"Resource\": \"*\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"Sid\": \"SageMaker\",\n",
-    "            \"Effect\": \"Allow\",\n",
-    "            \"Action\": [\n",
-    "                \"sagemaker:UpdateDomain\",\n",
-    "                \"sagemaker:UpdateUserProfile\"\n",
-    "            ],\n",
-    "            \"Resource\": \"*\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"Sid\": \"CloudWatch\",\n",
-    "            \"Effect\": \"Allow\",\n",
-    "            \"Action\": [\n",
-    "                \"cloudwatch:PutMetricData\",\n",
-    "                \"cloudwatch:GetMetricData\",\n",
-    "                \"cloudwatch:DescribeAlarmsForMetric\",\n",
-    "                \"logs:CreateLogStream\",\n",
-    "                \"logs:PutLogEvents\",\n",
-    "                \"logs:CreateLogGroup\",\n",
-    "                \"logs:DescribeLogStreams\"\n",
-    "            ],\n",
-    "            \"Resource\": \"*\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"Sid\": \"ECR\",\n",
-    "            \"Effect\": \"Allow\",\n",
-    "            \"Action\": [\n",
-    "                \"ecr:GetAuthorizationToken\",\n",
-    "                \"ecr:BatchCheckLayerAvailability\",\n",
-    "                \"ecr:GetDownloadUrlForLayer\",\n",
-    "                \"ecr:BatchGetImage\"\n",
-    "            ],\n",
-    "            \"Resource\": \"*\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"Sid\": \"S3\",\n",
-    "            \"Effect\": \"Allow\",\n",
-    "            \"Action\": [\n",
-    "                \"s3:CreateBucket\",\n",
-    "                \"s3:ListBucket\",\n",
-    "                \"s3:GetBucketLocation\",\n",
-    "                \"s3:PutObject\",\n",
-    "                \"s3:GetObject\",\n",
-    "                \"s3:DeleteObject\"\n",
-    "            ],\n",
-    "            \"Resource\": \"arn:aws:s3:::*\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"Sid\": \"EventBridge\",\n",
-    "            \"Effect\": \"Allow\",\n",
-    "            \"Action\": [\n",
-    "                \"events:PutRule\",\n",
-    "                \"events:PutTargets\"\n",
-    "            ],\n",
-    "            \"Resource\": \"*\"\n",
-    "        }\n",
-    "    ]\n",
-    "}\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "018a9140-93d0-400e-846f-ccbd1d17355a",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert\" style=\"background-color:#6e420c; color: #fff\"><strong>Note:</strong> \n",
-    "    Open the Amazon IAM service, find the role, go to the \"Trust relationships\" section and edit the configuration using the JSON below. Here, we want to ensure we have the \"events.amazonaws.com\" as part of the list of services.\n",
-    "</div>\n",
-    "\n",
-    "\n",
-    "```json\n",
-    "{\n",
-    "\t\"Version\": \"2012-10-17\",\n",
-    "\t\"Statement\": [\n",
-    "\t\t{\n",
-    "\t\t\t\"Effect\": \"Allow\",\n",
-    "\t\t\t\"Principal\": {\n",
-    "\t\t\t\t\"Service\": [\n",
-    "                    \"sagemaker.amazonaws.com\", \n",
-    "                    \"events.amazonaws.com\"\n",
-    "                ]\n",
-    "\t\t\t},\n",
-    "\t\t\t\"Action\": \"sts:AssumeRole\"\n",
-    "\t\t}\n",
-    "\t]\n",
-    "}\n",
-    "```"
+    "import os"
    ]
   },
   {
