--- a/penguins/cohort.ipynb
+++ b/penguins/cohort.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 55,
    "id": "212a0538-62b5-4875-a59c-1a4e1a833a07",
    "metadata": {
     "tags": []
@@ -59,87 +59,10 @@
      "output_type": "stream",
      "text": [
       "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "  %reload_ext autoreload\n",
+      "The dotenv extension is already loaded. To reload it, use:\n",
+      "  %reload_ext dotenv\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "environ{'COMMAND_MODE': 'unix2003',\n",
-       "        'CONDA_DEFAULT_ENV': 'base',\n",
-       "        'CONDA_EXE': '/Users/svpino/miniforge3/bin/conda',\n",
-       "        'CONDA_PREFIX': '/Users/svpino/miniforge3',\n",
-       "        'CONDA_PROMPT_MODIFIER': '(base) ',\n",
-       "        'CONDA_PYTHON_EXE': '/Users/svpino/miniforge3/bin/python',\n",
-       "        'CONDA_SHLVL': '1',\n",
-       "        'HOME': '/Users/svpino',\n",
-       "        'HOMEBREW_CELLAR': '/opt/homebrew/Cellar',\n",
-       "        'HOMEBREW_PREFIX': '/opt/homebrew',\n",
-       "        'HOMEBREW_REPOSITORY': '/opt/homebrew',\n",
-       "        'INFOPATH': '/opt/homebrew/share/info:',\n",
-       "        'LESS': '-R',\n",
-       "        'LOGNAME': 'svpino',\n",
-       "        'LSCOLORS': 'Gxfxcxdxbxegedabagacad',\n",
-       "        'LaunchInstanceID': 'C451C2F4-FE64-4A99-A78C-2766F258EEDE',\n",
-       "        'MANPATH': '/Users/svpino/.nvm/versions/node/v18.2.0/share/man:/opt/homebrew/share/man::',\n",
-       "        'MallocNanoZone': '0',\n",
-       "        'NVM_BIN': '/Users/svpino/.nvm/versions/node/v18.2.0/bin',\n",
-       "        'NVM_CD_FLAGS': '-q',\n",
-       "        'NVM_DIR': '/Users/svpino/.nvm',\n",
-       "        'NVM_INC': '/Users/svpino/.nvm/versions/node/v18.2.0/include/node',\n",
-       "        'OLDPWD': '/',\n",
-       "        'ORIGINAL_XDG_CURRENT_DESKTOP': 'undefined',\n",
-       "        'PAGER': 'cat',\n",
-       "        'PATH': '/Users/svpino/dev/ml.school/.venv/bin:/Users/svpino/miniforge3/bin:/Users/svpino/miniforge3/condabin:/Users/svpino/.nvm/versions/node/v18.2.0/bin:/Library/Frameworks/Python.framework/Versions/3.9/bin:/opt/homebrew/bin:/opt/homebrew/sbin:/usr/local/bin:/System/Cryptexes/App/usr/bin:/usr/bin:/bin:/usr/sbin:/sbin',\n",
-       "        'PWD': '/',\n",
-       "        'SECURITYSESSIONID': '186a7',\n",
-       "        'SHELL': '/bin/zsh',\n",
-       "        'SHLVL': '1',\n",
-       "        'SSH_AUTH_SOCK': '/private/tmp/com.apple.launchd.cKrNif5k8n/Listeners',\n",
-       "        'TMPDIR': '/var/folders/4c/v1q3hy1x4mb5w0wpc72zl3_w0000gp/T/',\n",
-       "        'USER': 'svpino',\n",
-       "        'VSCODE_AMD_ENTRYPOINT': 'vs/workbench/api/node/extensionHostProcess',\n",
-       "        'VSCODE_CODE_CACHE_PATH': '/Users/svpino/Library/Application Support/Code/CachedData/f1b07bd25dfad64b0167beb15359ae573aecd2cc',\n",
-       "        'VSCODE_CRASH_REPORTER_PROCESS_TYPE': 'extensionHost',\n",
-       "        'VSCODE_CWD': '/',\n",
-       "        'VSCODE_HANDLES_UNCAUGHT_ERRORS': 'true',\n",
-       "        'VSCODE_IPC_HOOK': '/Users/svpino/Library/Application Support/Code/1.83-main.sock',\n",
-       "        'VSCODE_NLS_CONFIG': '{\"locale\":\"en-us\",\"osLocale\":\"en-us\",\"availableLanguages\":{},\"_languagePackSupport\":true}',\n",
-       "        'VSCODE_PID': '58093',\n",
-       "        'XPC_FLAGS': '0x0',\n",
-       "        'XPC_SERVICE_NAME': '0',\n",
-       "        'ZSH': '/Users/svpino/.oh-my-zsh',\n",
-       "        '_': '/Users/svpino/dev/ml.school/.venv/bin/python',\n",
-       "        '__CFBundleIdentifier': 'com.microsoft.VSCode',\n",
-       "        '__CF_USER_TEXT_ENCODING': '0x1F6:0x0:0x0',\n",
-       "        'ELECTRON_RUN_AS_NODE': '1',\n",
-       "        'VSCODE_L10N_BUNDLE_LOCATION': '',\n",
-       "        'PYTHONUNBUFFERED': '1',\n",
-       "        'PYTHONIOENCODING': 'utf-8',\n",
-       "        'VIRTUAL_ENV': '/Users/svpino/dev/ml.school/.venv',\n",
-       "        'PS1': '(.venv) ',\n",
-       "        'LC_CTYPE': 'UTF-8',\n",
-       "        'PYDEVD_IPYTHON_COMPATIBLE_DEBUGGING': '1',\n",
-       "        'PYDEVD_USE_FRAME_EVAL': 'NO',\n",
-       "        'TERM': 'xterm-color',\n",
-       "        'CLICOLOR': '1',\n",
-       "        'FORCE_COLOR': '1',\n",
-       "        'CLICOLOR_FORCE': '1',\n",
-       "        'GIT_PAGER': 'cat',\n",
-       "        'MPLBACKEND': 'module://matplotlib_inline.backend_inline',\n",
-       "        'KMP_DUPLICATE_LIB_OK': 'True',\n",
-       "        'KMP_INIT_AT_FORK': 'FALSE',\n",
-       "        'TPU_ML_PLATFORM': 'Tensorflow',\n",
-       "        'TF2_BEHAVIOR': '1',\n",
-       "        'BUCKET': 'mlschool',\n",
-       "        'DOMAIN_ID': 'd-givocgtibv1g',\n",
-       "        'USER_PROFILE': 'default-1682182522641',\n",
-       "        'ROLE': 'arn:aws:iam::325223348818:role/service-role/AmazonSageMaker-ExecutionRole-20230312T160501'}"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -148,7 +71,6 @@
     "%load_ext dotenv\n",
     "%dotenv\n",
     "\n",
-    "import os\n",
     "import sys\n",
     "from pathlib import Path\n",
     "\n",
@@ -163,16 +85,7 @@
    "id": "58994d91",
    "metadata": {},
    "source": [
-    "<div class=\"alert\" style=\"background-color:#6e420c; color: #fff\"><strong>Note:</strong> \n",
-    "    Before running this notebook, make sure to go through the following instructions:\n",
-    "</div>\n",
-    "\n",
-    "To run this notebook:\n",
-    "\n",
-    "1. Select a unique name for your S3 bucket and replace the value of the `BUCKET` constant below. \n",
-    "2. Replace the value of the `EXECUTION_ROLE` constant with the ARN of the role with SageMaker access.\n",
-    "3. To run this notebook in **Local Mode** set the `LOCAL_MODE` constant to `True`. \n",
-    "4. If you are running this notebook in SageMaker Studio, you need to ensure your kernel is \"TensorFlow 2.11 Python 3.9 CPU Optimized\" with the start-up script named \"packages.\"\n",
+    "To run this notebook in **Local Mode** set the `LOCAL_MODE` constant to `True`. \n",
     "\n",
     "To build our system using SageMaker, we need access to `ml.m5.xlarge` instances. By default, the quota on a new AWS account is zero, so you need to request a quota increase. You can do that under Service Quotas > AWS Services > Amazon SageMaker. Find `ml.m5.xlarge` and request a quota increase for processing jobs, training jobs, transform jobs, and endpoint usage. In the meantime, you can use `ml.t3.large` as a substitute.\n",
     "\n"
@@ -180,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "id": "c1f894e2",
    "metadata": {
     "tags": []
@@ -208,16 +121,8 @@
     "from sagemaker.workflow.pipeline_context import PipelineSession, LocalPipelineSession\n",
     "\n",
     "LOCAL_MODE = False\n",
-    "\n",
-    "# Update this variable to your bucket name. This name must be unique\n",
-    "# across all AWS accounts.\n",
-    "BUCKET = \"mlschool\"\n",
-    "\n",
-    "# Update this variable to the ARN of the Execution Role associated to \n",
-    "# the user profile attached to your SageMaker Studio Domain.\n",
-    "# We need to set this value if we want to run this notebook outside \n",
-    "# of SageMaker Studio.\n",
-    "EXECUTION_ROLE = \"arn:aws:iam::325223348818:role/service-role/AmazonSageMaker-ExecutionRole-20230312T160501\"\n",
+    "BUCKET = os.environ[\"BUCKET\"]\n",
+    "EXECUTION_ROLE = os.environ[\"ROLE\"]\n",
     "\n",
     "try:\n",
     "    role = sagemaker.get_execution_role()\n",
@@ -293,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "id": "806bcb29-2999-4126-90dd-0c929a68c746",
    "metadata": {
     "tags": []
@@ -323,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 53,
    "id": "0b03948f-0eba-440f-b439-2b9aa2b87c80",
    "metadata": {
     "tags": []
@@ -335,7 +240,7 @@
        "'s3://mlschool/penguins/data/data.csv'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 54,
    "id": "f1cd2f0e-446d-48a9-a008-b4f1cc593bfc",
    "metadata": {
     "tags": []
@@ -484,7 +389,7 @@
        "4       3450.0  FEMALE  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
