--- a/penguins/studio-setup.ipynb
+++ b/penguins/studio-setup.ipynb
@@ -16,17 +16,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "9e7cca6b-3ed1-4dfb-a570-a9d40eb531e0",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "The dotenv extension is already loaded. To reload it, use:\n",
+      "  %reload_ext dotenv\n"
+     ]
+    }
+   ],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "%load_ext dotenv\n",
     "%dotenv\n",
     "\n",
-    "import os"
+    "import os\n",
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "CODE_FOLDER = Path(\"code\")\n",
+    "CODE_FOLDER.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "sys.path.append(f\"./{CODE_FOLDER}\")\n",
+    "\n",
+    "DOMAIN_ID=os.environ[\"DOMAIN_ID\"]\n",
+    "USER_PROFILE=os.environ[\"USER_PROFILE\"]"
    ]
   },
   {
@@ -36,7 +60,7 @@
     "tags": []
    },
    "source": [
-    "## Step 2 - Lifecycle Configuration\n",
+    "## Step 1 - Customize Kernel Libraries\n",
     "\n",
     "You can customize SageMaker Studio using Lifecycle configurations. These are shell scripts that will be triggered by lifecycle events, such as starting a new Studio notebook.\n",
     "\n",
@@ -45,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "00311496-3a75-4a04-880b-4301a21cb259",
    "metadata": {
     "tags": []
@@ -55,12 +79,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting packages.sh\n"
+      "Overwriting code/packages.sh\n"
      ]
     }
    ],
    "source": [
-    "%%writefile packages.sh\n",
+    "%%writefile {CODE_FOLDER}/packages.sh\n",
     "\n",
     "#!/bin/bash\n",
     "# This script upgrades the packages on a SageMaker \n",
@@ -86,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "c7b41df5-d6e7-4abe-a04d-8d390a3dea4f",
    "metadata": {
     "tags": []
@@ -96,7 +120,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "arn:aws:sagemaker:us-east-1:325223348818:studio-lifecycle-config/packages\n",
+      "arn:aws:sagemaker:us-east-1:325223348818:studio-lifecycle-config/ml-school\n",
       "{\n",
       "    \"UserProfileArn\": \"arn:aws:sagemaker:us-east-1:325223348818:user-profile/d-givocgtibv1g/default-1682182522641\"\n",
       "}\n"
@@ -104,18 +128,18 @@
     }
    ],
    "source": [
-    "%%bash -s \"$DOMAIN_ID\" \"$USER_PROFILE\"\n",
+    "%%bash -s \"$DOMAIN_ID\" \"$USER_PROFILE\" \"$CODE_FOLDER\"\n",
     "\n",
     "DOMAIN_ID=$(echo \"$1\")\n",
     "USER_PROFILE=$(echo \"$2\")\n",
     "\n",
-    "LCC_CONTENT=`openssl base64 -A -in packages.sh`\n",
+    "LCC_CONTENT=`openssl base64 -A -in $3/packages.sh`\n",
     "\n",
     "aws sagemaker delete-studio-lifecycle-config \\\n",
-    "    --studio-lifecycle-config-name packages\n",
+    "    --studio-lifecycle-config-name ml-school\n",
     "\n",
     "response=$(aws sagemaker create-studio-lifecycle-config \\\n",
-    "    --studio-lifecycle-config-name packages \\\n",
+    "    --studio-lifecycle-config-name ml-school \\\n",
     "    --studio-lifecycle-config-content $LCC_CONTENT \\\n",
     "    --studio-lifecycle-config-app-type KernelGateway) \n",
     "\n",
@@ -136,6 +160,8 @@
    "id": "b42c75df-6592-47ac-867a-1ab0955e1653",
    "metadata": {},
    "source": [
+    "## Step 2 - Set up Auto-Shutdown\n",
+    "\n",
     "The following script configures auto-shutdown of inactive kernels."
    ]
   },
@@ -156,7 +182,7 @@
     }
    ],
    "source": [
-    "%%writefile autoshutdown.sh\n",
+    "%%writefile {CODE_FOLDER}/autoshutdown.sh\n",
     "\n",
     "#!/bin/bash\n",
     "# This script installs the idle notebook auto-checker server extension to SageMaker Studio\n",
@@ -252,12 +278,12 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$DOMAIN_ID\" \"$USER_PROFILE\"\n",
+    "%%bash -s \"$DOMAIN_ID\" \"$USER_PROFILE\" \"$CODE_FOLDER\"\n",
     "\n",
     "DOMAIN_ID=$(echo \"$1\")\n",
     "USER_PROFILE=$(echo \"$2\")\n",
     "\n",
-    "LCC_CONTENT=`openssl base64 -A -in autoshutdown.sh`\n",
+    "LCC_CONTENT=`openssl base64 -A -in $3/autoshutdown.sh`\n",
     "\n",
     "aws sagemaker delete-studio-lifecycle-config \\\n",
     "    --studio-lifecycle-config-name autoshutdown 2> /dev/null\n",
@@ -282,14 +308,6 @@
     "        }\n",
     "    }'"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85dde144-cc46-47b1-a6ed-09f6e8eafa05",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
