--- a/penguins/cohort.ipynb
+++ b/penguins/cohort.ipynb
@@ -122,12 +122,11 @@
     "\n",
     "LOCAL_MODE = False\n",
     "BUCKET = os.environ[\"BUCKET\"]\n",
-    "EXECUTION_ROLE = os.environ[\"ROLE\"]\n",
     "\n",
     "try:\n",
     "    role = sagemaker.get_execution_role()\n",
     "except ValueError:\n",
-    "    role = EXECUTION_ROLE\n",
+    "    role = os.environ[\"ROLE\"]\n",
     "\n",
     "# If you are running this notebook on an ARM64 machine, you will need\n",
     "# to build a custom Docker image using the setup notebook. This is\n",
