--- a/program/cohort.ipynb
+++ b/program/cohort.ipynb
@@ -34,9 +34,7 @@
     "## Initial setup\n",
     "\n",
     ":::{.callout-note}\n",
-    "To build our system using SageMaker, we need access to `ml.m5.xlarge` instances. By default, the quota on a new AWS account is zero, so you need to request a quota increase. \n",
-    "\n",
-    "You can do that under Service Quotas > AWS Services > Amazon SageMaker. Find `ml.m5.xlarge` and request a quota increase for processing jobs, training jobs, transform jobs, and endpoint usage. In the meantime, you can use `ml.t3.large` as a substitute.\n",
+    "Before running this notebook, follow the [setup instructions](https://program.ml.school/setup.html) for the program.\n",
     ":::\n",
     "\n",
     "\n",
@@ -365,6 +363,10 @@
     "5. `flipper_length_mm`: The length of the penguin's flipper in millimeters\n",
     "6. `body_mass_g`: The body mass of the penguin in grams\n",
     "7. `sex`: The sex of the penguin\n",
+    "\n",
+    "If you are curious, here is the description of a penguin's culmen:\n",
+    "\n",
+    "<img src='images/culmen.jpeg' alt='Culmen' width=\"600\">\n",
     "\n",
     "Now, let's get the summary statistics for the features in our dataset."
    ]
