--- a/program/index.qmd
+++ b/program/index.qmd
@@ -11,7 +11,7 @@ Welcome to the program!
 
 ## Program Structure
 
-**Session 1 - Production Machine Learning Is Different**
+#### Session 1 - Production Machine Learning Is Different
 
 * An overview of the components of a machine learning system
 * The role of data in real-world applications
@@ -24,11 +24,11 @@ Welcome to the program!
 * A template architecture of a production-ready machine learning system
 * Understanding SageMaker’s Processing Step and Processing Jobs
 
-**Session 2 - Building Models And The Training Pipeline**
+#### Session 2 - Building Models And The Training Pipeline
 
 * The first rule of Machine Learning Engineering
 * A 3-step process to solve a problem using machine learning
-* 10 tips to select the best machine learning model for your solution
+* 9 tips to select the best machine learning model for your solution
 * Strategies for working with imbalanced data, dealing with rare events, and a quick introduction to cost-sensitive learning
 * The reason you should not balance your data
 * An introduction to hyperparameter tuning
@@ -36,7 +36,7 @@ Welcome to the program!
 * Distributed Training using data and model parallelism
 * Understanding SageMaker’s Training and Tuning Steps, and Training and Tuning Jobs
 
-**Session 3 - Evaluating and Versioning Models**
+#### Session 3 - Evaluating and Versioning Models
 
 * The difference between good models and useful models
 * Framing evaluation metrics in the context of business performance
@@ -49,6 +49,29 @@ Welcome to the program!
 * Evaluating Large Language Models using Supervised Evaluation and Self-Evaluation
 * An introduction to model versioning
 * Understanding SageMaker’s Model Registry, Condition, and Model Steps
+
+#### Session 4 - Deploying Models and Serving Predictions
+
+* How do model performance, speed, and cost affect models in production
+* Latency, throughput, and their relationships
+* Understanding on-demand inference and batch inference and when to use each one
+* How to make models run fast using model compression and a quick introduction to quantization and knowledge distillation
+* Deploying models in dedicated and multi-model endpoints 
+* A comparison of the tools you can use to serve predictions
+* Designing a 3-component inference pipeline
+* Understanding the internal structure of a SageMaker Endpoint
+* Understanding SageMaker's PipelineModel and Amazon EventBridge
+
+
+#### Session 5 - Data Distribution Shifts And Model Monitoring
+
+* The 3 most common problems your model will face in production
+* An introduction to data distribution shifts, edge cases, and unintended feedback loops 
+* Catastrophic predictions and the problem with edge cases
+* Understanding covariate shift and concept drift
+* Monitoring schema violations, data statistics, model performance, prediction distribution, and changes in user feedback
+* The 3 strategies to keep your models working despite data distribution shifts
+* Understanding SageMaker’s Transform Step, QualityCheck Step, Transform Jobs, and Monitoring Jobs
 
 
 ## Table of Contents
